--- a/pug/products.pug
+++ b/pug/products.pug
@@ -1,4 +1,7 @@
-extends index.pug
+extends main.pug
+
+block variables
+    - pagename = 'Каталог';
 
 block content
     section.content.products-catalog
