--- a/pug/single.pug
+++ b/pug/single.pug
@@ -1,4 +1,7 @@
-extends index.pug
+extends main.pug
+
+block variables
+    - pagename = 'Товар';
 
 block content
     section.content.single-product
