--- a/pug/cart.pug
+++ b/pug/cart.pug
@@ -1,4 +1,7 @@
-extends index.pug
+extends main.pug
+
+block variables
+    - pagename = 'Корзина';
 
 block content
     section.content.single-product
