--- a/pug/checkout.pug
+++ b/pug/checkout.pug
@@ -1,4 +1,7 @@
-extends index.pug
+extends main.pug
+
+block variables
+    - pagename = 'Оформление заказа';
 
 block content
     section.content.single-product
