--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,253 +1,76 @@
-doctype html
-html(lang="ru")
-    head
-        meta(charset='utf-8')
-        title Тайтл страницы
-        link(href='https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css' rel='stylesheet')
-        link(href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900" rel="stylesheet")
-        link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
-        //- link(href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css' rel='stylesheet')
-        link(href='css/style.css' rel='stylesheet')
+extends main.pug
 
-    body
-        //- .wrapper
-        block header
-            header.header
-                .container
-                    a(href='index.html').logo.header__logo
-                        img(src='img/logo.png' alt='Logo')
-                        | bran
-                        span.logo__d d
-                    .header__search.header-search
-                        .header-search__browse.dropdown-menu
-                            span.header-search__q Browse
-                            .dropdown-menu__container
-                                .dropdown-menu__header
-                                    a(href='#') Women
-                                ul
-                                    for val in ['Dresses','Tops','Sweaters/Knits','Jackets/Coats','Blazers','Denim','Leggings/Pants','Skirts/Shorts','Accessories']
-                                        li
-                                            a(href='#')=val
-                                .dropdown-menu__header
-                                    a(href='#') Men
-                                ul
-                                    for val in ['Tees/Tank tops','Shirts/Polos','Sweaters','Sweatshirts/Hoodies','Blazers','Jackets/vests']
-                                        li
-                                            a(href='#')=val
+block variables
+    - pagename = 'Главная страница';
 
-                        input(type='search' placeholder='Search for Item...').header-search__input
-                        button(type='submit').header-search__submit
-                            i.fa.fa-search
-
-                    .header__cartbox
-                        -
-                            cartitems = [
-                                {
-                                    img: 'img/cart-item1.jpg',
-                                    name: 'Rebox Zane',
-                                    count: 1,
-                                    price: 250
-                                },
-                                {
-                                    img: 'img/cart-item2.jpg',
-                                    name: 'Rebox Zane',
-                                    count: 1,
-                                    price: 250
-                                }
-                            ]
-                        .cart.dropdown-menu
-                            img(src='img/Cart.png' alt='Cart').cart__image
-                            .cart__items-count 2
-                            .dropdown-menu__container
-                                ul.cart__items
-                                    for val in cartitems
-                                        li.cart__item.cart-item
-                                            a(href='single.html')
-                                                img(src=val.img alt=val.name).cart-item__img
-                                            .cart-item__text
-                                                a(href='single.html').cart-item__head=val.name
-                                                img(src='img/stars.png' alt='Rating').cart-item__stars
-                                                .cart-item__count-price
-                                                    span.cart-item__count=val.count
-                                                    i= ' x '
-                                                    span.cart-item__price.currency=val.price
-
-                                            a(href='#item-delete').cart-item__delete
-                                                i.fa.fa-times-circle
-                                .cart__total-price
-                                    span.total-price__total TOTAL
-                                    span.total-price__price.currency 500.00
-                                a(href='checkout.html').cart__button.button-second.button-second--pink Checkout
-                                a(href='cart.html').cart__button.button-second Go to Cart
-                        a(href='#').header__accaunt.button-main= 'My Account '
-                            i.fa.fa-caret-down
-
-            nav.header-nav
-                ul
-                    li.mega-menu.dropdown-menu.active
-                        a(href='products.html') Home
-                        .dropdown-menu__container
-                            .mega-menu__wrapper
-                                .mega-menu__col.mega-menu__col1
-                                    .dropdown-menu__header
-                                        a(href='products.html') Women
-                                    ul
-                                        for val in ['Dresses','Tops','Sweaters/Knits','Jackets/Coats','Blazers','Denim','Leggings/Pants','Skirts/Shorts','Accessories']
-                                            li
-                                                a(href='#')=val
-                                .mega-menu__col.mega-menu__col2
-                                    .dropdown-menu__header
-                                        a(href='products.html') Women
-                                    ul
-                                        for val in ['Dresses','Tops','Sweaters/Knits','Jackets/Coats']
-                                            li
-                                                a(href='products.html')=val
-                                    .dropdown-menu__header
-                                        a(href='products.html') Women
-                                    ul
-                                        for val in ['Dresses','Tops','Sweaters/Knits']
-                                            li
-                                                a(href='#')=val
-                                .mega-menu__col.mega-menu__col3
-                                    .dropdown-menu__header
-                                        a(href='products.html') Women
-                                    ul
-                                        for val in ['Dresses','Tops','Sweaters/Knits','Jackets/Coats']
-                                            li
-                                                a(href='products.html')=val
-                                    a(href='single.html').mega-menu__img
-                                        img(src='img/mm-subersale.jpg' alt='Super Sale!')
-                                        .mega-menu__img-slogan Super sale!
-                    for val in ['Man', 'Women', 'Kids', 'Accoseriese', 'Featured', 'Hot Deals']
-                        li
-                            a(href='products.html')= val
-
-        block content
-            a(href='#').main-slider.container
-                img(src='img/slider-main.jpg' alt='Slider')
-                article.main-slider__container
-                    .main-slider__text
-                        h1.main-slider__text--h1 The Brand
-                        h2.main-slider__text--h2= 'of luxerious '
-                            span.color-pink fashion
+block content
+    a(href='#').main-slider.container
+        img(src='img/slider-main.jpg' alt='Slider')
+        article.main-slider__container
+            .main-slider__text
+                h1.main-slider__text--h1 The Brand
+                h2.main-slider__text--h2= 'of luxerious '
+                span.color-pink fashion
 
 
-            .main-categories.container
-                -
-                    categories = [
-                        {name:'Women', desc:'30% Offer', img:'img/offer-women.jpg'},
-                        {name:'For men', desc:'Hot deal', img:'img/offer-man.jpg'},
-                        {name:'For kids', desc:'New arrivals', img:'img/offer-child.jpg'},
-                        {name:'Accessories', desc:'Luxirous & trendy', img:'img/offer-acc.jpg'}
-                    ];
-                for val in categories
-                    article.main-categories__block.offer-block
-                        a(href='products.html')
-                            img(src=val.img alt=val.name).offer-block__image
-                            .offer-block__text
-                                .offer-block__desc=val.desc
-                                h2.offer-block__name=val.name
+    .main-categories.container
+        -
+            categories = [
+            {name:'Women', desc:'30% Offer', img:'img/offer-women.jpg'},
+            {name:'For men', desc:'Hot deal', img:'img/offer-man.jpg'},
+            {name:'For kids', desc:'New arrivals', img:'img/offer-child.jpg'},
+            {name:'Accessories', desc:'Luxirous & trendy', img:'img/offer-acc.jpg'}
+            ];
+        for val in categories
+            article.main-categories__block.offer-block
+                a(href='products.html')
+                    img(src=val.img alt=val.name).offer-block__image
+                    .offer-block__text
+                        .offer-block__desc=val.desc
+                        h2.offer-block__name=val.name
 
-            section.main-featured.featured-items.container
-                h2.featured-items__title Featured Items
-                .featured-items__desc Shop for items based on what we featured in this week
-                .featured-items__products-list.products-list.products-list--featured
-                    -
-                        featured = [
-                            {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item1.jpg'},
-                            {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item2.jpg'},
-                            {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item3.jpg'},
-                            {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item4.jpg'},
-                            {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item5.jpg'},
-                            {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item6.jpg'},
-                            {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item7.jpg'},
-                            {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item8.jpg'}
-                        ];
-                    for val in featured
-                        article.products-list-item
-                            a(href='single.html').products-list-item__link
-                                img(src=val.img alt=val.name).products-list-item__image
-                                h2.products-list-item__name=val.name
-                                .products-list-item__cost.currency=val.cost.toFixed(2)
-                            a(href='cart.html').products-list-item__cart Add to cart
+    section.main-featured.featured-items.container
+        h2.featured-items__title Featured Items
+        .featured-items__desc Shop for items based on what we featured in this week
+        .featured-items__products-list.products-list.products-list--featured
+            -
+                featured = [
+                {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item1.jpg'},
+                {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item2.jpg'},
+                {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item3.jpg'},
+                {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item4.jpg'},
+                {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item5.jpg'},
+                {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item6.jpg'},
+                {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item7.jpg'},
+                {name: 'Mango people t-shirt', cost: 52, img:'img/featured-item8.jpg'}
+                ];
+            for val in featured
+                article.products-list-item
+                    a(href='single.html').products-list-item__link
+                        img(src=val.img alt=val.name).products-list-item__image
+                        h2.products-list-item__name=val.name
+                        .products-list-item__cost.currency=val.cost.toFixed(2)
+                    a(href='cart.html').products-list-item__cart Add to cart
 
-                a(href='products.html').main-featured__button.button-main= 'Browse all products '
-                    i.fa.fa-long-arrow-right
-            aside.main-offer.container
-                -
-                    offers = [
-                        {name:'Free delivery', img:'img/offer-delivery.png', desc:'Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.'},
-                        {name:'Sales & discounts', img:'img/offer-sales.png', desc:'Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.'},
-                        {name:'Quality assurance', img:'img/offer-quality.png', desc:'Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.'}
-                    ];
-                a(href='').main-offer__link
-                    img(src='img/footer-banner.jpg' alt='Offer').main-offer__image
-                    .main-offer__text
-                        .main-offer__text--h1= '30% '
-                            span.color-pink offer
-                        .main-offer__text--h2 for women
-                    ul.main-offer__wrapper.offers.offers--column
-                        for val in offers
-                            li.main-offer-item.offer-item
-                                img(src=val.img alt=val.name).offer-item__img
-                                .offer-item__text
-                                    .offer-item__name=val.name
-                                    .offer-item__desc=val.desc
-        block footer
-            aside.subrevs
-                .container
-                    .subrevs__block
-                        .reviews
-                            img(src='img/user1.png' alt='User photo').reviews__image
-                            .reviews__text
-                                | “Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”
-                                .reviews__author.reviev-author
-                                    .reviev-author__name Bin Burhan
-                                    .reviev-author__desc Dhaka, Bd
-                                ul.reviews__paginator
-                                    for val in ['rev1','active', 'rev3']
-                                        li(class=val)
-                                            a(href='#' + val)
-                    .subrevs__block
-                        .subscribe
-                            .subscribe__h1 Subscribe
-                            .subscribe__h2 FOR OUR NEWLETTER AND PROMOTION
-                            .subscribe__input
-                                input(type='email' placeholder='Enter Your Email').text
-                                button(type='submit').button Subscribe
-
-            .about.container
-                .about__text
-                    a(href='index.html').about__logo.logo
-                        img(src='img/logo.png' alt='Logo')
-                        | bran
-                        span.logo__d d
-                    p Objectively transition extensive data rather than cross functional solutions. Monotonectally syndicate multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array of processes and cross-unit partnerships.
-                    p Efficiently plagiarize 24/365 action items and focused infomediaries. Distinctively seize superior initiatives for wireless technologies.
-                        br
-                        | Dynamically optimize.
-                nav.about__menu
-                    h2 Company
-                    ul
-                        for val in ['Home', 'Shop', 'About', 'How it works', 'Contact']
-                            li
-                                a(href='products.html')= val
-                nav.about__menu
-                    h2 Information
-                    ul
-                        each val in ['Tearms & Condition', 'Privacy Policy', 'How to Buy','How to Sell','Promotion']
-                            li
-                                a(href='products.html')=val
-                nav.about__menu
-                    h2 Shop Category
-                    ul
-                        for val in ['Men','Women','Child','Apparel','Brows All']
-                            li
-                                a(href='products.html')=val
-            footer.footer
-                .container
-                    div.footer__copy &copy; 2017 Brand  All Rights Reserved.
-                    .footer__socials
-                        each val in ['facebook', 'twitter', 'linkedin', 'pinterest-p', 'google-plus']
-                            a(href='' title=val)
-                                i(class='fa fa-' + val)
+        a(href='products.html').main-featured__button.button-main= 'Browse all products '
+        i.fa.fa-long-arrow-right
+    aside.main-offer.container
+        -
+            offers = [
+            {name:'Free delivery', img:'img/offer-delivery.png', desc:'Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.'},
+            {name:'Sales & discounts', img:'img/offer-sales.png', desc:'Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.'},
+            {name:'Quality assurance', img:'img/offer-quality.png', desc:'Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.'}
+            ];
+        a(href='').main-offer__link
+            img(src='img/footer-banner.jpg' alt='Offer').main-offer__image
+            .main-offer__text
+                .main-offer__text--h1= '30% '
+                span.color-pink offer
+                .main-offer__text--h2 for women
+            ul.main-offer__wrapper.offers.offers--column
+                for val in offers
+                    li.main-offer-item.offer-item
+                        img(src=val.img alt=val.name).offer-item__img
+                        .offer-item__text
+                            .offer-item__name=val.name
+                            .offer-item__desc=val.desc
