--- a/pug/cart.pug
+++ b/pug/cart.pug
@@ -1,7 +1,7 @@
 extends main.pug
 
 block variables
-    - pagename = 'Корзина';
+    - pagename = 'Cart';
 
 block content
     section.content.single-product
