--- a/pug/checkout.pug
+++ b/pug/checkout.pug
@@ -1,7 +1,7 @@
 extends main.pug
 
 block variables
-    - pagename = 'Оформление заказа';
+    - pagename = 'Checkout';
 
 block content
     section.content.single-product
