--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,7 +1,7 @@
 extends main.pug
 
 block variables
-    - pagename = 'Главная страница';
+    - pagename = 'Home';
 
 block content
     a(href='#').main-slider.container
